--- a/OdysseyProject/latest.html
+++ b/OdysseyProject/latest.html
@@ -1,13 +1,1 @@
-<!-- <style>
-    iframe{
-        width:100%;
-        height: 100%;
-        border-width: 0;
-        border-style: none;
-    }
-</style>
-<iframe src="octhulu.github.io/Build$204/index.html"></iframe> -->
-
-<script>
-    window.open("octhulu.github.io/Build$204/index.html", "_self")
-</script>
+<meta http-equiv="Refresh" content="0; url='octhulu.github.io/OdysseyProject/Build%204/index'" />
