--- a/OdysseyProject/latest.html
+++ b/OdysseyProject/latest.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='octhulu.github.io/OdysseyProject/Build%204/index'" />
+<meta http-equiv="Refresh" content="0; url='Build%204/index'" />
