Switched to iframes instead of redirects

--- a/OdysseyProject/index.html
+++ b/OdysseyProject/index.html
@@ -1,1 +1,17 @@
-<meta http-equiv="Refresh" content="0; url='latest'" />
+<!-- <meta http-equiv="Refresh" content="0; url='latest'" /> -->
+<head>
+    <style>
+        body{
+            margin: 0;
+        }
+
+        iframe{
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://octhulu.github.io/OdysseyProject/Build4/"></iframe>
+</body>
