--- a/OdysseyProject/index.html
+++ b/OdysseyProject/index.html
@@ -13,5 +13,5 @@
     </style>
 </head>
 <body>
-    <iframe src="https://octhulu.github.io/OdysseyProject/Build17/"></iframe>
+    <iframe src="https://octhulu.github.io/OdysseyProject/1.0.0/"></iframe>
 </body>
