--- a/OdysseyProject/versions.html
+++ b/OdysseyProject/versions.html
@@ -2,7 +2,7 @@
 <head>
     <style>
         .text-main{
-            font-family: arial;
+            font-family: Arial;
             color: black;
         }
 
@@ -16,11 +16,16 @@
 
         h2{background: #ffffff;margin: 0;padding-block-start: 0.83em;padding-block-end: 0.83em;}
 
-        p{
+        p, a{
             background: #f3f3f3;
             margin: 0;
             padding-block-start: 1em;
             padding-block-end: 1em;
+            display: block;
+        }
+
+        a{
+            font-family: Arial;
         }
     </style>
 </head>
@@ -29,14 +34,53 @@
         <h1 class="text-main">Odyssey Project Versions</h1>
         <p class="text-main">Thsese are all versions of my Odyssey Project hosted in this domain</p>
 
-        <div>
+        <div id = "s1">
             <h2 class="text-main">Development versions</h2>
             <p class="text-main">These are all incomplete builds of the project, done before I turned it in and initally released it.</p>
         </div>
         
-        <div>
+        <div id = "s2">
             <h2 class="text-main">Post-release versions</h2>
             <p class="text-main">These are all versions  of the game updated after I initally turned it in and released it</p>
         </div>
     </div>
+
+    <script>
+        const links = 
+        [
+            {
+                header: document.getElementById("s1"),
+                links: [
+                    "Build4",
+                    "Build5",
+                    "Build6",
+                    "Build9",
+                    "Build10",
+                    "Build11",
+                    "Build12",
+                    "Build13",
+                    "Build14",
+                    "Build15",
+                    "Build16",
+                    "Build17"
+                ]
+            },
+            {
+                header: document.getElementById("s2"),
+                links: [
+                    "1.0.0"
+                ]
+            }
+        ]
+
+        for (const section of links) {
+            for(const link of section.links){
+                var l = document.createElement("a")
+                l.href = `octhulu.github.io/OdysseyProject/${link}`
+                l.innerHTML = link
+
+                section.header.appendChild(l)
+            }
+        }
+    </script>
 </body>
